--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         </ul>
                         <li id = "LI">Java</li>
                         <ul>
-                            <li>Beginner</li>
+                            <li>Proficient</li>
                         </ul>
                     </ul>
                 </div>
